# Panoptes

./: .gitignore  Makefile  README.md  Rocket.toml
back/: Cargo.toml  Rocket.toml
back/src/: area.rs  config.rs  database.rs  locales.rs  main.rs  output.rs  params.rs
front/: README.md  package-lock.json  package.json
front/src/: App.vue  main.js
front/src/api/: AreaApi.js  PlayerApi.js  RatioApi.js
front/src/components/: ErrorView.vue  PlayerTableStats.vue
front/src/components/filters/: AreaFilter.vue  PlayerFilter.vue  PlayerStatsFilter.vue
front/src/plugins/: axios.js  vuetify.js
front/src/store/: index.js
scripts/: extract_translations.py
src/: area.rs  main.rs
