[package]
name = "panoptes-back"
version = "0.1.0"
authors = ["Amaury Carrade <amaury@carrade.eu>"]
edition = "2018"

[dependencies]
mysql = "18"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json", "uuid", "mysql_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
